salesforce-classic-Feature-IN-955/src/objects/Tract_Service_Custom_Field__c.object
<CustomObject>
    <label>Gotransverse Service Custom Field</label>
    <nameField>
        <label>Gotransverse Service Custom Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gotransverse Service Custom Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>eid__c</fullName>
        <externalId>true</externalId>
        <label>Gotransverse Eid</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldType__c</fullName>
        <label>Gotransverse Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StoreListValue__c</fullName>
        <label>Gotransverse Store List Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ValidationType__c</fullName>
        <label>Gotransverse Validation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>value__c</fullName>
        <label>Gotransverse Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>